--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,10 @@ dist.jar=${dist.dir}/EscolaLivre.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.21.jar=D:\\SOFTWARES\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
